# CUDA-Pathtracer

./: .gitignore  CMakeLists.txt  README.md
PathTracer/res/: cornell_box.mtl
Resources/: cornell_box.mtl
Source/: Application.cpp  BRDF.cpp  BRDF.h  CMakeLists.txt  Camera.cpp  Camera.h  CudaRenderer.cpp  CudaRenderer.h  Log.h  Material.h  Maths.h  Mesh.h  ModelLoader.h  Renderer.h  Scene.cpp  Scene.h  Size.h  Vector3f.h  Window.cpp  Window.h  glad.c  kernel.cu  kernel.cuh
src/: Application.cpp  Log.cpp  Material.h  Mesh.h  ModelLoader.h  Ray.h  Scene.cpp  Scene.h  Vector3f.h  Window.cpp  Window.h  kernel.cu  kernel.cuh
